--- a/site.html
+++ b/site.html
@@ -1,9 +1,62 @@
-<html>
-<body>
+<html lang="pt-BR" class="loaded">
 
-<h1>site dos cria</h1>
+    <head>
+        <link rel="stylesheet" type="text/css" href="main.css">  
+        <title>//</title>
 
-<p>hoje eu caguei nsas calça</p>
+    </head>
 
-</body>
+    <body bgcolor="black">
+        <header class="principal">
+            <div class="header-1">
+
+                <img src="imgs/searchicon.png" id=imgSearch width="25px" height="25px" alt="Imagem">
+                <input type="text" id=txtSearch placeholder="Pesquisar">
+
+            </div>
+
+            <hr width="80%" size="1">
+
+        </header>
+
+        <header class="meio">
+            <div class="header-2">
+                <img class="img-responsive" src="imgs/pornograffit-logo-svg.svg" id=imagem alt="Pornografit">
+            </div>    
+            <div class="meio-menu">
+                <li class="ver-tudo">
+                    <a href=https://youtu.be/cQtFTqh1mwM>Ver todos produtos</a>
+                </li>
+                <li>
+                    <a href=https://youtu.be/cQtFTqh1mwM>Produtos</a>
+                </li>
+                <li>
+                    <a href=https://youtu.be/cQtFTqh1mwM>No Precin</a>
+                </li>
+                <li>
+                    <a href=https://youtu.be/cQtFTqh1mwM>PornCast</a>
+                </li>
+                <li>
+                    <a href=https://youtu.be/cQtFTqh1mwM>PornSongs</a>
+                </li>
+                <li>
+                    <a href=https://youtu.be/cQtFTqh1mwM>Blog</a>
+                </li>
+                <li>
+                    <a href=https://youtu.be/cQtFTqh1mwM>Lookbook</a>
+                </li>
+                <li>
+                    <a href=https://youtu.be/cQtFTqh1mwM>Duvidas?</a>
+                </li>
+            </div>
+        </header>
+
+        
+
+
+
+    </body>
+
+
+    
 </html>
