--- a/site.html
+++ b/site.html
@@ -3,40 +3,73 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="main.css">  
-        <title>Portifolio</title>
+        <title>Portfolio</title>
     </head>
 
     <body>
         <header class="menu-principal">
             <div class="logo">  
                     <div id="container"></div>
-                    <a href="file:///C:/Users/samue/Desktop/portifolio/site.html"><img src="imgs/logo-all.png" width="250px"></a>
+                    <a href="#"><img src="imgs/logo-all.png" width="250px"></a>
             </div>
             <section class="menu-lateral">
                 <div class="menu">
-                    <div>
-                        <a href="#"><img src="imgs/menu-dot1.png"></a>
-                    </div>
-                    <div>
-                        <a href="#"><img src="imgs/menu-dot2.png"></a>
-                    </div>
-                    <div>
-                        <a href="#"><img src="imgs/menu-dot3.png"></a>
+                    <div class="menu-flex">
+                        <img src="imgs/menu-2.png" id="menu1" width="60px">
                     </div>
                 </div>
             </section>
             <section class="home-top" style="min-height: 790px;">
                 <div class="bg-image">
                     <img src="imgs/shinji.png" aria-grabbed="false">
-                    <div class="texto" style="min-height: 790px;">
+                    <div class="texto" style="min-height: 950px;">
                         <h1 class="large">Website Developer e Designer</h1>
                         <h4 class="bottom">-Insira texto aqui-</h4>
                     </div>  
                 </div>
-                
+            </section>
+            <section class="middle" style="min-height: 750px;">
+                <div class="bg-projects">
+                    <h4 class="bottom">PROJETOS</h1>
+                    <h1 class="large">Estudos</h4>
+                    <div class="item-portfolio">
+                        <a href=""><img src="imgs/free-space.png" id="img1"></a>
+                    </div>
+                    <div class="item-portfolio">
+                        <a href=""><img src="imgs/free-space.png" id="img2"></a>
+                    </div>
+                    <div class="item-portfolio">
+                        <a href=""><img src="imgs/free-space.png" id="img3"></a>
+                    </div>
+                    <div class="item-portfolio">
+                        <a href=""><img src="imgs/free-space.png" id="img4"></a>
+                    </div>
+                </div>
+                <div>
+                    <hr width=90%>
+                </div>
+                <div class="end-page">
+                    <div class="contato">
+                        <h3>Contato</h3>
+                        <li>E: <a href="mailto:samuel.felipe0222@gmail.com">samuel.felipe0222@gmail.com</a></li>
+                        <li>P: <span>+55 91111-1111</span></li>
+                    </div>
+                    <div class="social-media">
+                        <h3>Rede Sociais</h3>
+                        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/in/samuel-sousa-9548b91b2/" target="_blank">Linkedin</a></li>
+                    </div>
+                    <div class="logo-end-page">
+                        <a href=""><img src="imgs/logo.png" id="logo-end" width="60px"></a>
+                        <p class="copyright">© 2022 Samuel Sousa.</p>
+                    </div>
+                </div>
             </section>
         </header>
-        <main></main> 
+
+        
+        <main>
+        </main> 
     </body>
 
 </html>
