--- a/site.html
+++ b/site.html
@@ -10,13 +10,21 @@
     <main class="main">
         <section class="intial-section" id="initial">
             <div class="initial-conteiner" id="initial-conteiner">
-                <div class="minha-pessoa">
+                <div class="apresentacao">
+                    <div class="informacoes">
+                    <h3>prazer,</h3>
                     <h1>Samuel Sousa</h1>
-                    <h3 id="sobretexto">/Dev</h3>
+                    <h3 id="sbt">Desenvolvedor</h3>
                 </div>
             </div>
+            </div>
+        </section>
+        <section class="home-section" id="about">
+            <div class="home-conteiner">
+                
+            </div>
+
         </section>
     </main>
-    
 </body>
 </html>
