--- a/site.html
+++ b/site.html
@@ -8,26 +8,22 @@
 
     <body>
         <header class="menu-principal">
-            <div class="logo">  
-                    <div id="container"></div>
-                    <a href="#"><img src="imgs/logo-all.png" width="250px"></a>
-            </div>
-            <section class="menu-lateral">
-                
-            </section>
+
+            <!-- primeira secao-->
             <section class="home-top" style="min-height: 790px;">
                 <div class="bg-image">
-                    <img src="imgs/shinji.png" aria-grabbed="false">
                     <div class="texto" style="min-height: 950px;">
-                        <h1 class="large">Website Developer e Designer</h1>
-                        <h4 class="bottom">-Insira texto aqui-</h4>
+                        <h1 class="large_nome">Samuel Sousa</h1>
+                        <h4 class="bottom">-Abobrinha-</h4>
                     </div>  
                 </div>
             </section>
+
+            <!-- segunda secao -->
             <section class="middle" style="min-height: 750px;">
                 <div class="bg-projects">
                     <h4 class="bottom">PROJETOS</h1>
-                    <h1 class="large">Estudos</h4>
+                    <h1 class="large_estudos">Estudos</h4>
                     <div class="item-portfolio">
                         <a href=""><img src="imgs/free-space.png" id="img1"></a>
                     </div>
@@ -41,6 +37,10 @@
                         <a href=""><img src="imgs/free-space.png" id="img4"></a>
                     </div>
                 </div>
+            </section>
+            
+            <!-- rodape -->
+            <section class="end-page">
                 <div>
                     <hr width=90%>
                 </div>
