--- a/site.html
+++ b/site.html
@@ -22,41 +22,43 @@
             <!-- segunda secao -->
             <section class="middle" style="min-height: 750px;">
                 <div class="bg-projects">
-                    <h4 class="bottom">PROJETOS</h1>
-                    <h1 class="large_estudos">Estudos</h4>
-                    <div class="item-portfolio">
-                        <a href=""><img src="imgs/free-space.png" id="img1"></a>
-                    </div>
-                    <div class="item-portfolio">
-                        <a href=""><img src="imgs/free-space.png" id="img2"></a>
-                    </div>
-                    <div class="item-portfolio">
-                        <a href=""><img src="imgs/free-space.png" id="img3"></a>
-                    </div>
-                    <div class="item-portfolio">
-                        <a href=""><img src="imgs/free-space.png" id="img4"></a>
-                    </div>
+                    <h1 class="large_estudos">ESTUDOS</h4>
+                </div>
+                <div class="item-portfolio">
+                        <a href=""><img src="imgs/free-space.png" id="img"></a>
+                        <a href=""><img src="imgs/free-space.png" id="img"></a>
+                        <a href=""><img src="imgs/free-space.png" id="img"></a>
+                </div>
+            </section>
+
+            <section class="middle" style="min-height: 750px;">
+                <div class="bg-projects">
+                    <h1 class="large_estudos">PROJETOS</h4>
+                </div>
+
+                <div class="item-portfolio">
+                        <a href=""><img src="imgs/free-space.png" id="img"></a>
+                        <a href=""><img src="imgs/free-space.png" id="img"></a>
+                        <a href=""><img src="imgs/free-space.png" id="img"></a>
                 </div>
             </section>
             
             <!-- rodape -->
+            <div>
+                <hr width=90%>
+            </div>
             <section class="end-page">
-                <div>
-                    <hr width=90%>
-                </div>
                 <div class="end-page">
                     <div class="contato">
                         <h3>Contato</h3>
-                        <li>E: <a href="mailto:samuel.felipe0222@gmail.com">samuel.felipe0222@gmail.com</a></li>
-                        <li>P: <span>+55 91111-1111</span></li>
+                        <li>E: <a href="mailto:samuel.felipe0222@gmail.com" id="contato">samuel.felipe0222@gmail.com</a></li>
+                        <li>P: <span id="contato">+55 91111-1111</span></li>
                     </div>
                     <div class="social-media">
                         <h3>Rede Sociais</h3>
-                        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Instagram</a></li>
-                        <li><a href="https://www.linkedin.com/in/samuel-sousa-9548b91b2/" target="_blank">Linkedin</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" id="contato">Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/in/samuel-sousa-9548b91b2/" target="_blank" id="contato">Linkedin</a></li>
                     </div>
-                    <div class="logo-end-page">
-                        <a href=""><img src="imgs/logo.png" id="logo-end" width="60px"></a>
                         <p class="copyright">© 2022 Samuel Sousa.</p>
                     </div>
                 </div>
