--- a/site.html
+++ b/site.html
@@ -25,9 +25,9 @@
                     <h1 class="large_estudos">ESTUDOS</h4>
                 </div>
                 <div class="item-portfolio">
-                        <a href=""><img src="imgs/free-space.png" id="img"></a>
-                        <a href=""><img src="imgs/free-space.png" id="img"></a>
-                        <a href=""><img src="imgs/free-space.png" id="img"></a>
+                        <a href=""><img src="free-space.png" id="img"></a>
+                        <a href=""><img src="free-space.png" id="img"></a>
+                        <a href=""><img src="free-space.png" id="img"></a>
                 </div>
             </section>
 
@@ -37,9 +37,9 @@
                 </div>
 
                 <div class="item-portfolio">
-                        <a href=""><img src="imgs/free-space.png" id="img"></a>
-                        <a href=""><img src="imgs/free-space.png" id="img"></a>
-                        <a href=""><img src="imgs/free-space.png" id="img"></a>
+                        <a href=""><img src="free-space.png" id="img"></a>
+                        <a href=""><img src="free-space.png" id="img"></a>
+                        <a href=""><img src="free-space.png" id="img"></a>
                 </div>
             </section>
             
