rodape html e css

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </section>
             
             <!-- rodape -->
-            <div>
+            <div class="rodape-linha">
                 <hr width=90%>
             </div>
             <section class="end-page">
