--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </section>
             
             <!-- rodape -->
-            <div class="rodape-linha">
-                <hr width=90%>
+            <div>
+                <hr id="rodape-linha" width=90%>
             </div>
             <section class="end-page">
                 <div class="end-page">
