--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="end-page">
                     <div class="contato">
                         <h3>Contato</h3>
-                        <li>E: <a href="mailto:samuel.felipe0222@gmail.com" id="contato">samuel.felipe0222@gmail.com</a></li>
+                        <ul>E: <a href="mailto:samuel.felipe0222@gmail.com" id="contato">samuel.felipe0222@gmail.com</a></ul>
                         <li>P: <span id="contato">+55 91111-1111</span></li>
                     </div>
                     <div class="social-media">
