alteracoes rodape li to ul e div para copy

--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
                     <div class="contato">
                         <h3>Contato</h3>
                         <ul>E: <a href="mailto:samuel.felipe0222@gmail.com" id="contato">samuel.felipe0222@gmail.com</a></ul>
-                        <li>P: <span id="contato">+55 91111-1111</span></li>
+                        <ul>P: <span id="contato">+55 91111-1111</span></ul>
                     </div>
                     <div class="social-media">
                         <h3>Rede Sociais</h3>
-                        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" id="contato">Instagram</a></li>
-                        <li><a href="https://www.linkedin.com/in/samuel-sousa-9548b91b2/" target="_blank" id="contato">Linkedin</a></li>
+                        <ul><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" id="contato">Instagram</a></ul>
+                        <ul><a href="https://www.linkedin.com/in/samuel-sousa-9548b91b2/" target="_blank" id="contato">Linkedin</a></ul>
                     </div>
+                    <div>
                         <p class="copyright">© 2022 Samuel Sousa.</p>
                     </div>
                 </div>
