--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div>
                 <hr id="rodape-linha" width=90%>
             </div>
-            <section class="end-page">
+            <section class="end-page-s">
                 <div class="end-page">
                     <div class="contato">
                         <h3>Contato</h3>
@@ -64,9 +64,9 @@
                         <ul><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" id="contato">Instagram</a></ul>
                         <ul><a href="https://www.linkedin.com/in/samuel-sousa-9548b91b2/" target="_blank" id="contato">Linkedin</a></ul>
                     </div>
-                    <div>
-                        <p class="copyright">© 2022 Samuel Sousa.</p>
-                    </div>
+                </div>
+                <div>
+                    <p class="copyright">© 2022 Samuel Sousa.</p>
                 </div>
             </section>
         </header>
