--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <div class="bg-projects">
                     <h1 class="large_estudos">ESTUDOS</h4>
                 </div>
-                <div class="item-portfolio">
-                        <a href=""><img src="free-space.png" id="img"></a>
-                        <a href=""><img src="free-space.png" id="img"></a>
-                        <a href=""><img src="free-space.png" id="img"></a>
-                </div>
+                <ol class="item-portfolio">
+                    <a href=""><img src="free-space.png" id="img"></a>
+                    <a href=""><img src="free-space.png" id="img"></a>
+                    <a href=""><img src="free-space.png" id="img"></a>
+                </ol>
             </section>
 
             <section class="middle" style="min-height: 750px;">
